--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -17,6 +17,6 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
-  },
-  "include": ["vite.config.ts"]
+  }
+  //   "include": ["../vite.config.ts"]
 }
